--- a/ansible/playbook_test.yml
+++ b/ansible/playbook_test.yml
@@ -20,8 +20,8 @@
     - name: build_windows_client_template
       import_tasks: tasks/windows/build_client.yml
 
-    - name: deploy objects on windows server
-      import_tasks: tasks/windows/objects_server.yml
+    # - name: deploy objects on windows server
+    #   import_tasks: tasks/windows/objects_server.yml
     
     - name: configure ad for vulnerability
       import_tasks: tasks/windows/vulnerability.yml
